tests/transpiler/x/fs/membership.fs
// Mochi 0.10.31 - generated 2025-07-19 12:44:48 UTC
open System

let nums = [1; 2; 3]
printfn "%s" (string (2 in nums))
printfn "%s" (string (4 in nums))
